# scm-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/: client.py  server.py  utils.py
src/tools/: __init__.py  migration.py  network.py  objects.py  operations.py  policy_objects.py  profiles.py  search.py  security.py  setup.py
tests/: conftest.py  test_integration.py
